--- a/python/fatcat/templates/file_view.html
+++ b/python/fatcat/templates/file_view.html
@@ -14,8 +14,10 @@
 <div class="ten wide column">
 
 {% if file.extra != None %}
-<p><b>Additional Metadata (raw JSON):</b>
-<code>{{ file.extra }}</code>
+<h3>Extra Metadata (raw JSON)</h3>
+{% for (key, value) in file.extra.items() %}
+<code><b>{{ key }}:</b> {{ value }}</code><br>
+{% endfor %}
 {% endif %}
 
 <h3>Releases</h3>
