--- a/python/fatcat/templates/release_view.html
+++ b/python/fatcat/templates/release_view.html
@@ -54,10 +54,11 @@ linked to the same work.
 </div>
 {% endif %}
 
-
 {% if release.extra != None %}
-<p><b>Additional Metadata (raw JSON):</b>
-<code>{{ release.extra }}</code>
+<h3>Extra Metadata (raw JSON)</h3>
+{% for (key, value) in release.extra.items() %}
+<code><b>{{ key }}:</b> {{ value }}</code><br>
+{% endfor %}
 {% endif %}
 
 <!--
