--- a/python/fatcat/templates/creator_view.html
+++ b/python/fatcat/templates/creator_view.html
@@ -13,8 +13,10 @@
 <div class="one wide column"></div>
 <div class="ten wide column">
 
-<p><b>Given ("first") name:</b> {{ creator.given_name}}
-<p><b>Sur ("family"/"last") name:</b> {{ creator.surname }}
+<p><b>Given ("first") name:</b>
+    {% if creator.given_name != None %}{{ creator.given_name}}{% else %}<i>None or unknown</i>{% endif %}
+<p><b>Sur ("family"/"last") name:</b>
+    {% if creator.surname != None %}{{ creator.surname }}{% else %}<i>None or unknown</i>{% endif %}
 
 {% if creator.extra != None %}
 <h3>Extra Metadata (raw JSON)</h3>
@@ -29,7 +31,8 @@
 <p>This creator has contributed to:
 <ul>
   {% for release in releases %}
-  <li>"{{ release.title }}", a {{ release.release_type }} published {{ release.release_date }} (status: <code>{{ release.release_status }})</code>.
+  <li>"{{ release.title }}", a {{ release.release_type }} published {{ release.release_date }}
+      {% if release.release_status != None %}(status: <code>{{ release.release_status }})</code>{% endif %}.
     <br>Fatcat ID: <a href="/release/{{ release.ident }}"><code>{{ release.ident }}</code></a>
   {% endfor %}
 </ul>
