--- a/python/fatcat/templates/home.html
+++ b/python/fatcat/templates/home.html
@@ -4,8 +4,16 @@
 
 <h1>Welcome to fatcat!</h1>
 
-<p><b>Current Status:</b> Demo/prototype. No authentication, etc. All edits
-will be lost.
+<div class="ui message">
+  <div class="header">Current Status: Prototype</div>
+  <ul class="list">
+    <li>No authentication or accounts
+    <li>Any edits will be lost
+    <li>Most creation/edit forms don't work
+    <li>Any data was bulk-imported, and may not be up to date
+    <li>Search results are from Crossref, not local API/database
+  </ul>
+</div>
 
 <p>This is versioned, user-editable catalog of research publications: journal
 articles, conference proceedings, pre-prints, etc. Features include archival
@@ -21,27 +29,60 @@ indexing (aka, linking together of pre-prints and final copies).
 <tr><th>Entity
     <th>Actions
     <th>Examples
+    <th>Lookup
 </thead>
-<tr><td><b>Container</b>
-    <td><a href="/container/create">Create</a>
-    <td><a href="/container/00000000-0000-0000-1111-000000000002">Fake</a>
-        <br><a href="/container/00000000-0000-0000-1111-000000000003">Real</a>
-<tr><td><b>Creator</b>
-    <td><!-- <a href="/creator/create">Create</a> -->
-    <td><a href="/creator/00000000-0000-0000-2222-000000000002">Fake</a>
-        <br><a href="/creator/00000000-0000-0000-2222-000000000003">Real</a>
-<tr><td><b>File</b>
-    <td>
-    <td><a href="/file/00000000-0000-0000-3333-000000000002">Fake</a>
-        <br><a href="/file/00000000-0000-0000-3333-000000000003">Real</a>
 <tr><td><b>Release</b>
+        <br>journal article, pre-print, book
+        <br>published version of a Work
     <td><a href="/release/create">Create</a>
-    <td><a href="/release/00000000-0000-0000-4444-000000000002">Fake</a>
-        <br><a href="/release/00000000-0000-0000-4444-000000000003">Real</a>
-<tr><td><b>Work</b>
+    <td><a href="/release/00000000-0000-0000-4444-000000000002">Dummy</a>
+        <br><a href="/release/00000000-0000-0000-4444-000000000003">Realistic</a>
+    <td><form class="" role="lookup" action="/release/lookup" method="get">
+          <div class="ui icon input">
+            <i class="search icon"></i>
+            <input type="text" placeholder="DOI" name="doi">
+          </div>
+        </form>
+<tr><td><b>Container</b>
+        <br>journal or serial
+    <td><a href="/container/create">Create</a>
+    <td><a href="/container/00000000-0000-0000-1111-000000000002">Dummy</a>
+        <br><a href="/container/00000000-0000-0000-1111-000000000003">Realistic</a>
+    <td><form class="" role="lookup" action="/container/lookup" method="get">
+          <div class="ui icon input">
+            <i class="search icon"></i>
+            <input type="text" placeholder="ISSN-L" name="issnl">
+          </div>
+        </form>
+
+<tr><td><b>Creator</b>
+        <br>authors, editors, translators
+    <td><!-- <a href="/creator/create">Create</a> -->
+    <td><a href="/creator/00000000-0000-0000-2222-000000000002">Dummy</a>
+        <br><a href="/creator/00000000-0000-0000-2222-000000000003">Realistic</a>
+    <td><form class="" role="lookup" action="/creator/lookup" method="get">
+          <div class="ui icon input">
+            <i class="search icon"></i>
+            <input type="text" placeholder="ORCID" name="orcid">
+          </div>
+        </form>
+<tr><td><b>File</b>
+        <br>specific digital blobs (immutable)
     <td>
-    <td><a href="/work/00000000-0000-0000-5555-000000000002">Fake</a>
-        <br><a href="/work/00000000-0000-0000-5555-000000000003">Real</a>
+    <td><a href="/file/00000000-0000-0000-3333-000000000002">Dummy</a>
+        <br><a href="/file/00000000-0000-0000-3333-000000000003">Realistic</a>
+    <td><form class="" role="lookup" action="/file/lookup" method="get">
+          <div class="ui icon input">
+            <i class="search icon"></i>
+            <input type="text" placeholder="SHA-1" name="sha1">
+          </div>
+        </form>
+<tr><td><b>Work</b>
+        <br>for grouping Releases
+    <td>
+    <td><a href="/work/00000000-0000-0000-5555-000000000002">Dummy</a>
+        <br><a href="/work/00000000-0000-0000-5555-000000000003">Realistic</a>
+    <td>
 </table>
 
 </div>
