add cat photo to front page

--- a/python/fatcat/templates/home.html
+++ b/python/fatcat/templates/home.html
@@ -2,7 +2,9 @@
 {% block body %}
 <div class="ui container text">
 
-<h1>Welcome to fatcat!</h1>
+<h1 class="ui header centered">Welcome to fatcat!</h1>
+
+<img class="ui fluid bordered image" src="/static/fatcat.jpg" title="CC0 photo of an oversized feline" alt="">
 
 <div class="ui message">
   <div class="header">Current Status: Prototype</div>
