larger font (slightly)

--- a/python/fatcat/templates/container_view.html
+++ b/python/fatcat/templates/container_view.html
@@ -11,7 +11,7 @@
 
 <div class="ui stackable mobile reversed grid centered">
 <div class="one wide column"></div>
-<div class="ten wide column">
+<div class="ten wide column" style="font-size: 16px;">
 
 <p><b>Publisher:</b>
 {% if container.publisher != None %}{{ container.publisher }}{% else %}<i>Unknown</i>{% endif %}
