--- a/python/fatcat/templates/work_view.html
+++ b/python/fatcat/templates/work_view.html
@@ -11,7 +11,7 @@
 
 <div class="ui stackable mobile reversed grid centered">
 <div class="one wide column"></div>
-<div class="ten wide column">
+<div class="ten wide column" style="font-size: 16px;">
 
 {% if work.extra != None %}
 <h3>Extra Metadata (raw JSON)</h3>
