python updates for identifier changes

--- a/python/fatcat/templates/container_view.html
+++ b/python/fatcat/templates/container_view.html
@@ -89,7 +89,8 @@ Raw Object:
 </div><div class="ui segment attached">
 
 <b>Fatcat Bits</b>
-<p>Revision #{{ container.revision }}. State is "{{ container.state }}"
+<p>State is "{{ container.state }}". Revision:
+<br><small><code>{{ container.revision }}</code></small>
 <br><a href="https://api.qa.fatcat.wiki/v0/container/{{ container.ident }}">As JSON object via API</a>
 
 </div>
