--- a/python/fatcat/templates/editor_view.html
+++ b/python/fatcat/templates/editor_view.html
@@ -7,7 +7,6 @@
 </div>
 </h1>
 
-<p>Is Admin? {{ editor.is_admin }}
-<p><a href="/editor/{{ editor.username }}/changelog">Changelog</a>
+<p><b><a href="/editor/{{ editor.id }}/changelog">View editor's changelog</a></b>
 
 {% endblock %}
