--- a/python/fatcat/templates/release_view.html
+++ b/python/fatcat/templates/release_view.html
@@ -223,7 +223,8 @@ This release citing other releases.
 </div><div class="ui segment attached">
 
 <b>Fatcat Bits</b>
-<p>Revision #{{ release.revision }}. State is "{{ release.state }}"
+<p>State is "{{ release.state }}". Revision:
+<br><small><code>{{ release.revision }}</code></small>
 <br><a href="https://api.qa.fatcat.wiki/v0/release/{{ release.ident }}">As JSON object via API</a>
 
 </div>
