--- a/python/fatcat/templates/work_view.html
+++ b/python/fatcat/templates/work_view.html
@@ -56,7 +56,8 @@ still reference the same underlying "work".
 </div><div class="ui segment attached">
 
 <b>Fatcat Bits</b>
-<p>Revision #{{ work.revision }}. State is "{{ work.state }}"
+<p>State is "{{ work.state }}". Revision:
+<br><small><code>{{ work.revision }}</code></small>
 <br><a href="https://api.qa.fatcat.wiki/v0/work/{{ work.ident }}">As JSON object via API</a>
 
 </div>
