--- a/python/fatcat/templates/creator_view.html
+++ b/python/fatcat/templates/creator_view.html
@@ -63,7 +63,8 @@ Raw Object:
 </div><div class="ui segment attached">
 
 <b>Fatcat Bits</b>
-<p>Revision #{{ creator.revision }}. State is "{{ creator.state }}"
+<p>State is "{{ creator.state }}". Revision:
+<br><small><code>{{ creator.revision }}</code></small>
 <br><a href="https://api.qa.fatcat.wiki/v0/creator/{{ creator.ident }}">As JSON object via API</a>
 
 </div>
