include git revision in footer

--- a/python/fatcat/templates/base.html
+++ b/python/fatcat/templates/base.html
@@ -37,9 +37,9 @@
       demo-user <i class="dropdown icon"></i>
         <div class="menu">
           <a class="item" href="/editgroup/current"><i class="edit icon"></i>Edits in Progress</a>
-          <a class="item" href="/editor/demo-user/changelog"><i class="history icon"></i>History</a>
+          <a class="item" href="/editor/aaaaaaaaaaaabkvkaaaaaaaaae/changelog"><i class="history icon"></i>History</a>
           <div class="divider"></div>
-          <a class="item" href="/editor/demo-user"><i class="user icon"></i>Account</a>
+          <a class="item" href="/editor/aaaaaaaaaaaabkvkaaaaaaaaae"><i class="user icon"></i>Account</a>
           <a class="item" href="/logout"><i class="sign out icon"></i>Logout</a>
         </div>
       </div>
@@ -61,12 +61,12 @@
 <footer class="ui inverted vertical footer segment" style="margin-top: 2em; padding-top: 2em; padding-bottom:2em; position: absolute; bottom: 0px; width: 100%;">
   <div class="ui center aligned container">
     <div class="ui horizontal inverted small divided link list">
-      <span class="item">fatcat!</span>
+      <a class="item" href="/">fatcat!</a>
       <a class="item" href="/about">About</a>
       <a class="item" href="#">Sources</a>
       <a class="item" href="#">Status</a>
       <a class="item" href="#">Datasets</a>
-      <a class="item" href="https://git.bnewbold.net/fatcat/">Source Code</a>
+      <a class="item" href="https://git.bnewbold.net/fatcat/">Source Code (<code>{{ config.GIT_REVISION.decode() }}</code>)</a>
     </div>
   </div>
 </footer>
