--- a/python/fatcat/templates/editor_changelog.html
+++ b/python/fatcat/templates/editor_changelog.html
@@ -10,12 +10,20 @@
 </h1>
 
 <p>Changes accepted (aka, merged editgroups):
-<ul>
-{% for entry in changelog_entries %}
-  <li><a href="/editgroup/{{ entry.editgroup }}">Edit Group #{{ entry.editgroup }}</a> (on {{ entry.timestamp }})
-{% else %}
-NONE
-{% endfor %}
-</ul>
+<table class="ui table">
+  <thead><tr><th>Changelog<br>Index
+             <th>Timestamp (UTC)
+             <th>Editgroup
+             <th>Editor
+             <th>Description
+  <tbody>
+  {% for entry in changelog_entries %}
+  <tr><td><a href="/changelog/{{ entry.index }}">{{ entry.index }}</a>
+      <td>{{ entry.timestamp }}
+      <td><code><a href="/editgroup/{{ entry.editgroup_id }}">{{ entry.editgroup_id }}</a></code>
+      <td><code><a href="/editor/{{ entry.editgroup.editor_id }}">{{ entry.editgroup.editor_id }}</a></code>
+      <td>{% if entry.editgroup.description != None %}{{ entry.editgroup.description }}{% endif %}
+  {% endfor %}
+</table>
 
 {% endblock %}
