--- a/python/fatcat/templates/release_view.html
+++ b/python/fatcat/templates/release_view.html
@@ -150,7 +150,7 @@ This release citing other releases.
     <li>{% if ref.extra != None %}{{ ref.extra }}{% else %}<i>unknown</i>{% endif %}
     {% if ref.target_release_id != None %}
       (<a href="/release/{{ ref.target_release_id }}">fatcat release</a>)
-    {% else if ref.extra.doi != None %}
+    {% elif ref.extra != None and ref.extra.doi != None %}
       (DOI: <a href="/release/lookup?doi={{ ref.exta.doi }}">{{ ref.extra.doi }}</a>)
     {% endif %}
   {% endfor %}
