compact file html table

--- a/python/fatcat/templates/file_view.html
+++ b/python/fatcat/templates/file_view.html
@@ -45,7 +45,7 @@ No known public URL, mirror, or archive for this file.
 {% endif %}
 
 <h3>Checksums</h3>
-<table class="ui table">
+<table class="ui compact table">
   <thead>
     <tr><th>Algorithm
         <th>Value
