have domain URLs be configurable

--- a/python/fatcat/templates/base.html
+++ b/python/fatcat/templates/base.html
@@ -23,7 +23,7 @@
       fatcat!
     </a>
     <a href="/about" class="item">About</a>
-    <a href="https://guide.fatcat.wiki/" class="item">Guide</a>
+    <a href="https://guide.{{ config.FATCAT_DOMAIN }}/" class="item">Guide</a>
     <div class="right menu">
       <div class="item">
         <form class="" role="search" action="/release/search" method="get">
@@ -63,9 +63,9 @@
     <div class="ui horizontal inverted small divided link list">
       <a class="item" href="/">fatcat!</a>
       <a class="item" href="/about">About</a>
-      <a class="item" href="https://guide.fatcat.wiki/Sources</a>
+      <a class="item" href="https://guide.{{ config.FATCAT_DOMAIN }}/Sources</a>
       <a class="item" href="#TODO">Status</a>
-      <a class="item" href="https://guide.fatcat.wiki/bulk_exports.html">Bulk Exports</a>
+      <a class="item" href="https://guide.{{ config.FATCAT_DOMAIN }}/bulk_exports.html">Bulk Exports</a>
       <a class="item" href="https://git.bnewbold.net/fatcat/">Source Code (<code>{{ config.GIT_REVISION.decode() }}</code>)</a>
     </div>
   </div>
