--- a/python/fatcat/templates/container_view.html
+++ b/python/fatcat/templates/container_view.html
@@ -94,7 +94,7 @@ Raw Object:
 <b>Fatcat Bits</b>
 <p>State is "{{ container.state }}". Revision:
 <br><small><code>{{ container.revision }}</code></small>
-<br><a href="https://api.qa.fatcat.wiki/v0/container/{{ container.ident }}">As JSON object via API</a>
+<br><a href="https://api.{{ config.FATCAT_DOMAIN }}/v0/container/{{ container.ident }}">As JSON object via API</a>
 
 </div>
 <div class="two ui buttons bottom attached">
