--- a/python/fatcat/templates/home.html
+++ b/python/fatcat/templates/home.html
@@ -20,7 +20,7 @@
 <p>This is versioned, user-editable catalog of research publications: journal
 articles, conference proceedings, pre-prints, etc. Features include archival
 file-level metadata (verified digests and long-term copies, in addition to
-URLs), a <a href="https://api.fatcat.wiki">documented API</a>, and work/release
+URLs), a <a href="https://api.{{ config.FATCAT_DOMAIN }}">documented API</a>, and work/release
 indexing (aka, linking together of pre-prints and final copies).
 <a href="/about">Read more...</a>
 
