--- a/python/fatcat/templates/creator_view.html
+++ b/python/fatcat/templates/creator_view.html
@@ -68,7 +68,7 @@ Raw Object:
 <b>Fatcat Bits</b>
 <p>State is "{{ creator.state }}". Revision:
 <br><small><code>{{ creator.revision }}</code></small>
-<br><a href="https://api.qa.fatcat.wiki/v0/creator/{{ creator.ident }}">As JSON object via API</a>
+<br><a href="https://api.{{ config.FATCAT_DOMAIN }}/v0/creator/{{ creator.ident }}">As JSON object via API</a>
 
 </div>
 <div class="two ui buttons bottom attached">
