--- a/python/fatcat/templates/file_view.html
+++ b/python/fatcat/templates/file_view.html
@@ -93,7 +93,7 @@ Raw Object:
 <b>Fatcat Bits</b>
 <p>State is "{{ file.state }}". Revision:
 <br><small><code>{{ file.revision }}</code></small>
-<br><a href="https://api.qa.fatcat.wiki/v0/file/{{ file.ident }}">As JSON object via API</a>
+<br><a href="https://api.{{ config.FATCAT_DOMAIN }}/v0/file/{{ file.ident }}">As JSON object via API</a>
 
 </div>
 <div class="two ui buttons bottom attached">
