--- a/python/fatcat/templates/work_view.html
+++ b/python/fatcat/templates/work_view.html
@@ -58,7 +58,7 @@ still reference the same underlying "work".
 <b>Fatcat Bits</b>
 <p>State is "{{ work.state }}". Revision:
 <br><small><code>{{ work.revision }}</code></small>
-<br><a href="https://api.qa.fatcat.wiki/v0/work/{{ work.ident }}">As JSON object via API</a>
+<br><a href="https://api.{{ config.FATCAT_DOMAIN }}/v0/work/{{ work.ident }}">As JSON object via API</a>
 
 </div>
 <div class="two ui buttons bottom attached">
